@startuml

title __UNMOVABLE's Class Diagram__\n

  namespace TankGame {
    namespace GameObject {
      namespace Unmovable {
        class TankGame.GameObject.Unmovable.BreakableWall {
            ~ wallRect : Rectangle
            - destroyed : boolean
            - height : int
            - width : int
            + BreakableWall()
            + breakWall()
            + draw()
            + update()
            + update()
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Unmovable {
        class TankGame.GameObject.Unmovable.PowerUp {
            ~ pickedUp : boolean
            + PowerUp()
            + draw()
            + update()
            + update()
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Unmovable {
        class TankGame.GameObject.Unmovable.Unmovable {
            + Unmovable()
            + Unmovable()
            + Unmovable()
            + Unmovable()
        }
      }
    }
  }
  

  namespace TankGame {
    namespace GameObject {
      namespace Unmovable {
        class TankGame.GameObject.Unmovable.Wall {
            ~ wallRect : Rectangle
            - height : int
            - width : int
            + Wall()
            + draw()
            + getWallRectangle()
            + update()
            + update()
        }
      }
    }
  }
  

  TankGame.GameObject.Unmovable.BreakableWall .up.|> java.util.Observer
  TankGame.GameObject.Unmovable.BreakableWall -up-|> TankGame.GameObject.Unmovable.Wall
  TankGame.GameObject.Unmovable.PowerUp .up.|> java.util.Observer
  TankGame.GameObject.Unmovable.PowerUp -up-|> TankGame.GameObject.Unmovable.Unmovable
  TankGame.GameObject.Unmovable.Unmovable -up-|> TankGame.GameObject.GameObject
  TankGame.GameObject.Unmovable.Wall .up.|> java.util.Observer
  TankGame.GameObject.Unmovable.Wall -up-|> TankGame.GameObject.Unmovable.Unmovable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
